[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Personagens/BOSS/SIGMA/SIGMABoss.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Personagens/BOSS/SIGMA/Chefe.gd" type="Script" id=2]
[ext_resource path="res://Assets/Personagens/Boss/SIGMA/HUD/Signma_HUD.png" type="Texture" id=3]
[ext_resource path="res://Assets/Personagens/Boss/SIGMA/Sigma_Ship.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 112, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 112, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 112, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 112, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 112, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 112, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 112, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 112, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 112, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 112, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), null, SubResource( 8 ), null, SubResource( 9 ), null, SubResource( 10 ), null ],
"loop": true,
"name": "hit",
"speed": 10.0
} ]

[sub_resource type="AudioStreamGenerator" id=12]

[sub_resource type="Animation" id=13]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Chefe:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -40 ), Vector2( 0, 230 ) ]
}

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 2, 0, 96, 12 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 2, 16, 96, 12 )

[sub_resource type="Curve2D" id=16]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 56.25, 34, 0, 0, 0, 0, 67.5, 34, 0, 0, 0, 0, 90, 14, 0, 0, 0, 0, 191.25, 74, 0, 0, 0, 0, 270, 84, 0, 0, 0, 0, 348.75, 74, 0, 0, 0, 0, 450, 14, 0, 0, 0, 0, 472.5, 34, 0, 0, 0, 0, 483.75, 34 )
}

[node name="SigmaBoss" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 230.0, 266.001, 300.001 ],
"_edit_vertical_guides_": [ 270.0, 50.0, 490.0, 130.0, 170.0, 240.0, 300.0, 370.0, 410.0 ]
}

[node name="Chefe" type="Area2D" parent="."]
position = Vector2( 0, -40 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 270.0 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Chefe"]
position = Vector2( 270, 70 )
scale = Vector2( 5, 5 )
frames = SubResource( 11 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Chefe"]
polygon = PoolVector2Array( 0, 0, 0, 50, 20, 70, 90, 70, 110, 50, 180, 110, 200, 110, 230, 120, 310, 120, 340, 110, 360, 110, 430, 50, 430, 50, 450, 70, 520, 70, 540, 50, 540, 0 )

[node name="LV1_Cannons_Timer" type="Timer" parent="Chefe"]

[node name="LV2_Cannons_Timer" type="Timer" parent="Chefe"]
wait_time = 2.5

[node name="LV3_Cannons_Timer" type="Timer" parent="Chefe"]
wait_time = 5.0

[node name="Hipercannon_Timer" type="Timer" parent="Chefe"]
wait_time = 12.0
one_shot = true

[node name="Recharge" type="Timer" parent="Chefe"]
wait_time = 5.0
one_shot = true

[node name="End_Timer" type="Timer" parent="Chefe"]
wait_time = 0.2

[node name="Sound" type="AudioStreamPlayer" parent="Chefe"]
stream = SubResource( 12 )
bus = "Shot Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BossShip = SubResource( 13 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="LifeBar" type="TextureProgress" parent="Canvas"]
margin_left = 30.0
margin_top = 181.0
margin_right = 130.0
margin_bottom = 193.0
rect_scale = Vector2( 5, 5 )
value = 50.0
texture_under = SubResource( 14 )
texture_progress = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeSpawn" type="Path2D" parent="."]
position = Vector2( 30, 265 )
scale = Vector2( 0.888889, 1 )
curve = SubResource( 16 )

[node name="SpawnPoint" type="PathFollow2D" parent="LifeSpawn"]
position = Vector2( 56.25, 34 )

[node name="Boom_pos" type="Position2D" parent="."]
[connection signal="pause" from="." to="Chefe" method="_pause"]
[connection signal="area_entered" from="Chefe" to="." method="_on_Chefe_area_entered"]
[connection signal="hipercannon" from="Chefe" to="." method="_on_Chefe_hipercannon"]
[connection signal="animation_finished" from="Chefe/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Chefe/LV1_Cannons_Timer" to="Chefe" method="_on_LV1_Cannons_Timer_timeout"]
[connection signal="timeout" from="Chefe/LV2_Cannons_Timer" to="Chefe" method="_on_LV2_Cannons_Timer_timeout"]
[connection signal="timeout" from="Chefe/LV3_Cannons_Timer" to="Chefe" method="_on_LV3_Cannons_Timer_timeout"]
[connection signal="timeout" from="Chefe/Hipercannon_Timer" to="Chefe" method="_on_Hipercannon_Timer_timeout"]
[connection signal="timeout" from="Chefe/Recharge" to="Chefe" method="_on_Recharge_timeout"]
[connection signal="timeout" from="Chefe/End_Timer" to="." method="_on_End_Timer_timeout"]
[connection signal="finished" from="Chefe/Sound" to="." method="_on_Sound_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Chefe" method="_on_AnimationPlayer_animation_finished"]
